# musd

./: README.md  install.bat  install.sh  pyproject.toml  run.bat  run.sh
freegsnke/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md
freegsnke/docs/: README.md  build_documentation.sh  conf.py  requirements_docs.txt
freegsnke/examples/: README.md  example0 - build_tokamak_machine.ipynb  example1 - static_inverse_solve_MASTU.ipynb  example2 - static_forward_solve_MASTU.ipynb  example3 - extracting_equilibrium_quantites.ipynb  example4 - using_magnetic_probes.ipynb  example5 - evolutive_forward_solve.ipynb  example6a - static_forward_MASTU_solves_from_magnetics_only_data.ipynb  example6b - static_forward_MASTU_solves_from_magnetics_and_MSE_data.ipynb  example7 - static_inverse_solve_SPARC.ipynb  example8 - static_inverse_solve_ITER.ipynb  limiter_currents.json  simple_diverted_currents_PaxisIp.pk  simple_limited_currents_PaxisIp.pk
musd/: __init__.py  __main__.py  calculation.py  dependency.py  freegsnke_util.py  gui_util.py  type_checks.py  widget.py
musd/tests/: core_f05.json  do_science_results.json  test_calculation.py  test_integration.py  test_read_data.py
musd_config/: Ip.pickle  MAST-U_active_coils.pickle  MAST-U_active_coils_nonsym.pickle  MAST-U_limiter.pickle  MAST-U_magnetic_probes.pickle  MAST-U_passive_coils.pickle  alpha.pickle  beta.pickle  beta_logic.pickle  current_lables.pickle  currents_values.pickle  efit_status.pickle  efit_times.pickle  equil_r_lim.pickle  equil_z_lim.pickle  fvac.pickle  machine_data.pickle  status.pickle
(+12 files in other folders)
